# csvloc

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
csvloc/: __main__.py  args.py  reader.py  types.py  writer.py
tests/: conftest.py  test_acceptance.py
tests/fixtures/: en-US.csv  fi-FI.csv  multiple.csv
