[tool.poetry]
name = "csvloc"
version = "0.1.0"
description = "Merge shared localizable strings to a single CSV file."
authors = ["Jarkko Piiroinen <183207+jmp@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
csvloc = "csvloc.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
